# openapi.json
@@ -39,9 +39,7 @@
   "paths": {
     "/images/{id}": {
       "get": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Serve the required image",
         "parameters": [
           {
@@ -77,9 +75,7 @@
     },
     "/images": {
       "put": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Upload a picture",
         "description": "Returns the UUID associated with the uploaded picture or an error if encountered",
         "requestBody": {
@@ -129,9 +125,7 @@
     },
     "/auth/id": {
       "get": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "summary": "Get a new UUID for a device",
         "description": "Returns an UUID for the current unauthorized session",
         "responses": {
@@ -156,9 +150,7 @@
     },
     "/auth/register": {
       "post": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "summary": "Register a new account with username, password, and first name",
         "description": "Lets a user register a new account with the minimum data required, but allows to provide extra fields such as lastName and city. Returns a bearer JWT token",
         "requestBody": {
@@ -187,11 +179,7 @@
                     }
                   },
                   {
-                    "required": [
-                      "username",
-                      "password",
-                      "firstName"
-                    ]
+                    "required": ["username", "password", "firstName"]
                   }
                 ]
               }
@@ -226,9 +214,7 @@
     },
     "/auth/login": {
       "post": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "summary": "Login with username and password",
         "description": "Lets a user login with its credentials and returns a JWT bearer token",
         "requestBody": {
@@ -277,9 +263,7 @@
     },
     "/auth/password": {
       "patch": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "summary": "Change the currently logged in user's password",
         "requestBody": {
           "required": true,
@@ -314,9 +298,7 @@
     },
     "/auth/me": {
       "get": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "summary": "Get the currently logged in user",
         "responses": {
           "200": {
@@ -338,9 +320,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "summary": "Delete the currently logged in user",
         "responses": {
           "200": {
@@ -355,9 +335,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "summary": "Update your profile information",
         "requestBody": {
           "required": true,
@@ -420,9 +398,7 @@
     },
     "/game/score/{game}": {
       "patch": {
-        "tags": [
-          "game"
-        ],
+        "tags": ["game"],
         "summary": "Update your score for a given game",
         "parameters": [
           {
@@ -478,9 +454,7 @@
         }
       },
       "get": {
-        "tags": [
-          "game"
-        ],
+        "tags": ["game"],
         "summary": "Get your score for a given game",
         "parameters": [
           {
@@ -522,9 +496,7 @@
     },
     "/game/leaderboard/{game}": {
       "get": {
-        "tags": [
-          "game"
-        ],
+        "tags": ["game"],
         "summary": "Get the leaderboard of all players for a given game with pagination",
         "parameters": [
           {
@@ -580,9 +552,7 @@
     },
     "/community/boards/": {
       "get": {
-        "tags": [
-          "community"
-        ],
+        "tags": ["community"],
         "summary": "Get the forum structure, i.e. a listing of boards (subforums)",
         "parameters": [
           {
@@ -625,9 +595,7 @@
         }
       },
       "put": {
-        "tags": [
-          "community"
-        ],
+        "tags": ["community"],
         "summary": "Create a new board for the community to post in",
         "requestBody": {
           "required": true,
@@ -669,9 +637,7 @@
     },
     "/community/boards/{board}/": {
       "get": {
-        "tags": [
-          "community"
-        ],
+        "tags": ["community"],
         "summary": "Get a specific board, including a paging of its posts",
         "parameters": [
           {
@@ -729,9 +695,7 @@
         }
       },
       "put": {
-        "tags": [
-          "community"
-        ],
+        "tags": ["community"],
         "summary": "Post a new message in the specified board",
         "parameters": [
           {
@@ -774,9 +738,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "community"
-        ],
+        "tags": ["community"],
         "summary": "Delete a whole community board, including all of its posts",
         "parameters": [
           {
@@ -802,9 +764,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "community"
-        ],
+        "tags": ["community"],
         "summary": "Update an existing board name and description",
         "parameters": [
           {
@@ -860,9 +820,7 @@
     },
     "/community/boards/{board}/{post}": {
       "delete": {
-        "tags": [
-          "community"
-        ],
+        "tags": ["community"],
         "summary": "Delete a single post",
         "parameters": [
           {
@@ -897,9 +855,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "community"
-        ],
+        "tags": ["community"],
         "summary": "Edit a previously published post",
         "parameters": [
           {
@@ -956,9 +912,7 @@
     },
     "/store/products/": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get the products catalogue, i.e. a listing of every product",
         "parameters": [
           {
@@ -1004,9 +958,7 @@
         }
       },
       "put": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Insert a new product into the store",
         "requestBody": {
           "required": true,
@@ -1066,9 +1018,7 @@
     },
     "/store/products/{product}": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get a single product",
         "parameters": [
           {
@@ -1104,9 +1054,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Deletes a product from the store",
         "parameters": [
           {
@@ -1132,9 +1080,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Update an existing product in the store",
         "parameters": [
           {
@@ -1200,9 +1146,7 @@
     },
     "/store/pets/": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get the pets catalogue, i.e. a listing of every pet",
         "parameters": [
           {
@@ -1248,9 +1192,7 @@
         }
       },
       "put": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Insert a new pet into the store",
         "requestBody": {
           "required": true,
@@ -1310,9 +1252,7 @@
     },
     "/store/pets/{pet}": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get a single pet from the store",
         "parameters": [
           {
@@ -1348,9 +1288,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Remove a pet from the store",
         "parameters": [
           {
@@ -1376,9 +1314,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Update an existing pet in the store",
         "parameters": [
           {
@@ -1444,9 +1380,7 @@
     },
     "/store/orders/": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get a listing of the orders visible to you",
         "parameters": [
           {
@@ -1492,9 +1426,7 @@
         }
       },
       "put": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Place a new order",
         "requestBody": {
           "required": true,
@@ -1540,9 +1472,7 @@
     },
     "/store/orders/{order}": {
       "patch": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Update an order's status",
         "parameters": [
           {
@@ -1564,12 +1494,7 @@
                 "properties": {
                   "status": {
                     "type": "string",
-                    "enum": [
-                      "placed",
-                      "approved",
-                      "rejected",
-                      "delivered"
-                    ]
+                    "enum": ["placed", "approved", "rejected", "delivered"]
                   }
                 }
               }
@@ -1598,9 +1523,7 @@
     },
     "/store/services/": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get the services catalogue, i.e. a listing of every service (filtered search is available)",
         "parameters": [
           {
@@ -1666,9 +1589,7 @@
         }
       },
       "put": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Insert a new service into the store",
         "requestBody": {
           "required": true,
@@ -1741,9 +1662,7 @@
     },
     "/store/services/{service}": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get a single service",
         "parameters": [
           {
@@ -1779,9 +1698,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Delete a service from the store",
         "parameters": [
           {
@@ -1807,9 +1724,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Update an existing service in the store",
         "parameters": [
           {
@@ -1896,9 +1811,7 @@
     },
     "/store/appointments/": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get a listing of the appointments visible to you",
         "parameters": [
           {
@@ -1944,9 +1857,7 @@
         }
       },
       "put": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Make a new appointment",
         "requestBody": {
           "required": true,
@@ -1994,9 +1905,7 @@
     },
     "/store/appointments/{appointment}": {
       "delete": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Cancel an appointment",
         "parameters": [
           {
@@ -2024,9 +1933,7 @@
     },
     "/store/categories/": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get the categories catalogue, i.e. a listing of every category",
         "responses": {
           "200": {
@@ -2048,9 +1955,7 @@
         }
       },
       "put": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Add a category to the catalogue",
         "requestBody": {
           "required": true,
@@ -2089,9 +1994,7 @@
     },
     "/store/categories/{category}": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get the specified category",
         "parameters": [
           {
@@ -2124,9 +2027,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Delete a category from the store",
         "parameters": [
           {
@@ -2152,9 +2053,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Edit a category in the catalogue",
         "parameters": [
           {
@@ -2207,9 +2106,7 @@
     },
     "/store/categories/{category}/subcategories/": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get a listing of the subcategories associated to a certain category",
         "parameters": [
           {
@@ -2248,9 +2145,7 @@
         }
       },
       "put": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Add a subcategory to a category",
         "parameters": [
           {
@@ -2303,9 +2198,7 @@
     },
     "/store/subcategories/{subcategory}": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get the specified subcategory",
         "parameters": [
           {
@@ -2341,9 +2234,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Delete a subcategory from the store",
         "parameters": [
           {
@@ -2369,9 +2260,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Edit a subcategory in the catalogue",
         "parameters": [
           {
@@ -2424,9 +2313,7 @@
     },
     "/store/stores/": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Get a listing of every shop location",
         "parameters": [
           {
@@ -2472,9 +2359,7 @@
         }
       },
       "put": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Register a new location",
         "requestBody": {
           "required": true,
@@ -2516,9 +2401,7 @@
     },
     "/store/locations/{id}": {
       "delete": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Delete a location",
         "parameters": [
           {
@@ -2544,9 +2427,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Update an existing location",
         "parameters": [
           {
@@ -2702,9 +2583,7 @@
       },
       "GameType": {
         "type": "string",
-        "enum": [
-          "quiz"
-        ]
+        "enum": ["quiz"]
       },
       "Interval": {
         "type": "object",
@@ -2738,12 +2617,7 @@
           },
           "status": {
             "type": "string",
-            "enum": [
-              "placed",
-              "approved",
-              "rejected",
-              "delivered"
-            ]
+            "enum": ["placed", "approved", "rejected", "delivered"]
           }
         }
       },
@@ -2974,10 +2848,7 @@
       },
       "SortOrder": {
         "type": "number",
-        "enum": [
-          -1,
-          1
-        ]
+        "enum": [-1, 1]
       },
       "Subcategory": {
         "type": "object",
@@ -3010,11 +2881,7 @@
           "level": {
             "type": "integer",
             "description": "User subscription or role",
-            "enum": [
-              0,
-              1,
-              2
-            ]
+            "enum": [0, 1, 2]
           },
           "preferences": {
             "type": "array",
